Fixed layout issues

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,16 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url(//db.onlinewebfonts.com/c/e5c490a944bc2b2746f0c851501e46c7?family=AvenirNextW10-Bold);
-@import url("https://fonts.googleapis.com/css2?family=Inter&display=swap");
-
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  background-color: #000000;
+  background-color: white;
 }
 
 a {
@@ -29,17 +26,8 @@ a {
 
 @font-face {
   font-family: "AvenirNextW10-Bold";
-  src: url("//db.onlinewebfonts.com/t/e5c490a944bc2b2746f0c851501e46c7.eot");
-  src: url("//db.onlinewebfonts.com/t/e5c490a944bc2b2746f0c851501e46c7.eot?#iefix")
-      format("embedded-opentype"),
-    url("//db.onlinewebfonts.com/t/e5c490a944bc2b2746f0c851501e46c7.woff2")
-      format("woff2"),
-    url("//db.onlinewebfonts.com/t/e5c490a944bc2b2746f0c851501e46c7.woff")
-      format("woff"),
-    url("//db.onlinewebfonts.com/t/e5c490a944bc2b2746f0c851501e46c7.ttf")
-      format("truetype"),
-    url("//db.onlinewebfonts.com/t/e5c490a944bc2b2746f0c851501e46c7.svg#AvenirNextW10-Bold")
-      format("svg");
+  src: url("../public/fonts/AvenirNext.ttf");
+
 }
 
 .Avenir {
@@ -47,37 +35,26 @@ a {
   font-display: swap;
 }
 
+.clearNav {
+  backdrop-filter: saturate(180%) blur(5px) !important;
+  /* background-color: rgba(255, 255, 255, 0.6) !important; */
+  background-color: #FFAA33 !important;
+}
+
 .grr {
   grid-template-columns: repeat(2, 1fr);
 }
 
-.txg {
-  color: #b8bcbf;
-}
-
-.ld-04 {
-  letter-spacing: 0.025em;
-}
-
-.lh-6 {
-  line-height: 1.08;
-}
-
-.text-80 {
-  font-size: 80px;
-}
-
-.font-4 {
-  font-family: Inter, sans-serif;
-}
-
-.tr04 {
+.greyC {
+  filter: gray;
+  -webkit-filter: grayscale(100%); 
   transition: 0.4s;
 }
 
-.clearNav {
-  backdrop-filter: saturate(180%) blur(5px) !important;
-  background-color: rgba(0, 0, 0, 0.7) !important;
+.greyC:hover {
+  filter: none;
+  -webkit-filter: none;
+  transition: 0.4s;
 }
 
 .fsac4 {
@@ -91,9 +68,3 @@ a {
     grid-template-columns: repeat(2, 1fr);
   }
 }
-
-.fkrr1 {
-  font-family: "Inter", sans-serif;
-}
-
-
